UTbase_o/c.err
mkdir -p Debug
cc -I/usr/include/opencv4 -c -g -DUTDATA="\"/home/yoshinao/REPOS/WORK/UTData/\"" -D_DEBUG -I../gtest/include -I.. -o Debug/optc.o optc.cc
optc.cc: In member function ‘virtual void {anonymous}::optc_set_get_Test::TestBody()’:
optc.cc:51:9: error: ‘pBL_optc_t’ was not declared in this scope; did you mean ‘pBL_cptr_t’?
   51 |         pBL_optc_t optc = BL_optc_new(ARRAYSIZE(eqc_funcs), ARRAYSIZE(neqc_funcs));
      |         ^~~~~~~~~~
      |         pBL_cptr_t
In file included from ../gtest/include/gtest/gtest.h:384,
                 from optc.cc:1:
optc.cc:52:22: error: ‘optc’ was not declared in this scope
   52 |         ASSERT_EQ(3, optc->n_eqc);
      |                      ^~~~
../gtest/include/gtest/gtest_pred_impl.h:77:52: note: in definition of macro ‘GTEST_ASSERT_’
   77 |   if (const ::testing::AssertionResult gtest_ar = (expression)) \
      |                                                    ^~~~~~~~~~
../gtest/include/gtest/gtest_pred_impl.h:168:3: note: in expansion of macro ‘GTEST_PRED_FORMAT2_’
  168 |   GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
      |   ^~~~~~~~~~~~~~~~~~~
../gtest/include/gtest/gtest.h:2049:3: note: in expansion of macro ‘ASSERT_PRED_FORMAT2’
 2049 |   ASSERT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
      |   ^~~~~~~~~~~~~~~~~~~
../gtest/include/gtest/gtest.h:2065:32: note: in expansion of macro ‘GTEST_ASSERT_EQ’
 2065 | # define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
      |                                ^~~~~~~~~~~~~~~
optc.cc:52:9: note: in expansion of macro ‘ASSERT_EQ’
   52 |         ASSERT_EQ(3, optc->n_eqc);
      |         ^~~~~~~~~
optc.cc:53:22: error: ‘optc’ was not declared in this scope
   53 |         ASSERT_EQ(2, optc->n_neqc);
      |                      ^~~~
../gtest/include/gtest/gtest_pred_impl.h:77:52: note: in definition of macro ‘GTEST_ASSERT_’
   77 |   if (const ::testing::AssertionResult gtest_ar = (expression)) \
      |                                                    ^~~~~~~~~~
../gtest/include/gtest/gtest_pred_impl.h:168:3: note: in expansion of macro ‘GTEST_PRED_FORMAT2_’
  168 |   GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
      |   ^~~~~~~~~~~~~~~~~~~
../gtest/include/gtest/gtest.h:2049:3: note: in expansion of macro ‘ASSERT_PRED_FORMAT2’
 2049 |   ASSERT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
      |   ^~~~~~~~~~~~~~~~~~~
../gtest/include/gtest/gtest.h:2065:32: note: in expansion of macro ‘GTEST_ASSERT_EQ’
 2065 | # define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
      |                                ^~~~~~~~~~~~~~~
optc.cc:53:9: note: in expansion of macro ‘ASSERT_EQ’
   53 |         ASSERT_EQ(2, optc->n_neqc);
      |         ^~~~~~~~~
optc.cc:54:22: error: ‘optc’ was not declared in this scope
   54 |         ASSERT_EQ(6, optc->objectives->unit_count);
      |                      ^~~~
../gtest/include/gtest/gtest_pred_impl.h:77:52: note: in definition of macro ‘GTEST_ASSERT_’
   77 |   if (const ::testing::AssertionResult gtest_ar = (expression)) \
      |                                                    ^~~~~~~~~~
../gtest/include/gtest/gtest_pred_impl.h:168:3: note: in expansion of macro ‘GTEST_PRED_FORMAT2_’
  168 |   GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
      |   ^~~~~~~~~~~~~~~~~~~
../gtest/include/gtest/gtest.h:2049:3: note: in expansion of macro ‘ASSERT_PRED_FORMAT2’
 2049 |   ASSERT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
      |   ^~~~~~~~~~~~~~~~~~~
../gtest/include/gtest/gtest.h:2065:32: note: in expansion of macro ‘GTEST_ASSERT_EQ’
 2065 | # define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
      |                                ^~~~~~~~~~~~~~~
optc.cc:54:9: note: in expansion of macro ‘ASSERT_EQ’
   54 |         ASSERT_EQ(6, optc->objectives->unit_count);
      |         ^~~~~~~~~
optc.cc:55:25: error: ‘optc’ was not declared in this scope
   55 |         BL_optc_delete(&optc);
      |                         ^~~~
optc.cc:55:9: error: ‘BL_optc_delete’ was not declared in this scope
   55 |         BL_optc_delete(&optc);
      |         ^~~~~~~~~~~~~~
make: *** [makefile:47: Debug/optc.o] Error 1
